--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
-    "mongoose": "^6.0.14",
-    "multer": "^1.4.3"
+    "mongoose": "^6.0.14"
   }
 }
